helium page nav: avoid headers moving behind top navigation bar

--- a/io/src/main/resources/laika/helium/css/container.css
+++ b/io/src/main/resources/laika/helium/css/container.css
@@ -12,6 +12,15 @@ body {
   margin-top: 0;
 }
 
+#container {
+  position: fixed;
+  top: var(--top-bar-height);
+  left: 0;
+  height: calc(100% - var(--top-bar-height));
+  width: 100%;
+  overflow-y: auto;
+}
+
 main.content {
   display: block;
   width: 100%;
@@ -29,8 +38,9 @@ main.content {
 
 @media (min-width: 1020px) {
   #container {
-    margin-left: var(--nav-width) !important;
-    transition: margin .25s ease-out;
+    left: var(--nav-width) !important;
+    width: calc(100% - var(--nav-width));
+    transition: left .25s ease-out;
   }
   main.content {
     max-width: var(--content-width);
